# bubble_frontend

./: .gitignore  Cargo.toml  README.md  index.html  index.scss
src/: main.rs  page_state.rs
src/components/: login.rs  mod.rs  navbar.rs
src/components/news/: card.rs  feed.rs  mod.rs  saved.rs
src/models/: feed.rs  mod.rs  save.rs  user.rs
src/pages/: content.rs
