[package]
name = "bubble_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.8.1"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
gloo = "0.8"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
reqwasm = {version="0.5.0", features=["json"]}
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features=["HtmlInputElement", "HtmlSelectElement", "HtmlTableRowElement", "HtmlDivElement", "HtmlAnchorElement"]} 
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-nested-router = "0.6.1"